[package]
name = "simple_ast"
version = "0.1.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[features]
default = ["onig"]

onig = ["oniguruma"]
pcre = ["pcre2"]


[dependencies]
lazy_static = "1.3.0"

[dependencies.oniguruma]
version = "6.0.0"
optional = true
package = "onig"
default-features = false

[dependencies.pcre2]
version = "0.2.1"
optional = true
